--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -11,6 +11,10 @@
     <link href="../output.css" type="text/css" rel="stylesheet">
     <script src="../main.js" type="text/javascript" async></script>
     <title>Virtual VKU</title>
+
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css" />
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -18,14 +22,14 @@
         <div class="root font-Karla max-w-screen-2xl text-base mx-auto md:px-8 bg-white font-medium">
 
             <!-- Header -->
-            <div class="header py-6 mx-auto fixed top-0 bg-white left-0 right-0 z-50">
+            <div class="header py-6 mx-auto fixed top-0 bg-white left-0 right-0 z-50 shadow-xl">
                 <div class="nav flex flex-row justify-between items-center relative">
                     <div class="logo basic-2/6 text-center text-3xl font-semibold cursor-pointer px-7 lg:px-24 ">
-                        <a class="flex flex-col justify-center items-center" href="/VKU-virtual/public/">
+                        <a class="flex flex-col justify-center items-center" href="/">
                             <div class="font-semibold text-lime-500">Virtual</div>
                             <div class="flex flex-row">
-                                <div class="uppercase font-black text-yellow-600">v</div>
-                                <div class="uppercase font-black text-red-600">k</div>
+                                <div class="uppercase font-black text-red-600">v</div>
+                                <div class="uppercase font-black text-yellow-400">k</div>
                                 <div class="uppercase font-black text-blue-600">u</div>
                             </div>
                         </a>
@@ -35,19 +39,19 @@
 
                     <ul id="nav-menu" class=" hidden basis-3/6 lg:flex lg:justify-end lg:gap-9 uppercase text-sm text-gray-500">
                         <li class="top-menu-item">
-                            <a href="/VKU-virtual/public/">home</a>
+                            <a href="/">home</a>
                         </li>
                         <li class="top-menu-item">
-                            <a href="/VKU-virtual/public/mapdigital">digital map</a>
+                            <a href="/mapdigital">digital map</a>
                         </li>
                         <li class="top-menu-item">
-                            <a href="/VKU-virtual/public/group">club&groups</a>
+                            <a href="/group">club&groups</a>
                         </li>
                         <li class="top-menu-item">
-                            <a href="/VKU-virtual/public/contests">contests</a>
+                            <a href="/contests">contests</a>
                         </li>
                         <li class="top-menu-item top-menu-item-active">
-                            <a href="/VKU-virtual/public/contract">contract</a>
+                            <a href="/contract">contract</a>
                         </li>
                         <!-- <li class="top-menu-item top-menu-item-active">
                             <a href="https://github.com/dangnha" target="blank">dangnha</a>
@@ -78,8 +82,55 @@
             </div>
 
             <!-- Body page -->
-            <div class="mt-[84px]  mb-[120px] h-[660px] bg-gray-500"></div>
+            <!-- <div class="mt-[120px] xl:w-[70%] w-[90%] mx-auto mb-[120px] lg:h-auto h-[12 00px] z-0 flex flex-col justify-center gap-10"> -->
+            <div class="container bg-slate-400 mt-[130px] xl:w-[70%] w-[90%] mx-auto mb-[120px] lg:h-auto h-[12 00px] z-0 flex flex-col justify-center gap-10">
+                <h1 class="brand uppercase text-2xl"><span>Contact with the Groups</span></h1>
+                </h1>
+                <div class="wrapper">
+                    <div class="company-info">
+                        <h3>Pencils groups</h3>
+                        <ul>
+                            <li><i class="fa fa-road"></i> 470 Đường Trần Đại Nghĩa, Hoà Hải, Ngũ Hành Sơn, Đà Nẵng.</li>
+                            <li><i class="fa fa-phone"></i> 0583654158</li>
+                            <li><i class="fa fa-envelope"></i> trungpq.21it@vku.udn.vn</li>
+                        </ul>
+                    </div>
+                    <div class="contact">
+                        <h3>Email Us</h3>
+                        <div class="alert">Your message has been sent</div>
+                        <form id="contactForm">
+                            <p class="full">
+                                <label>Name</label>
+                                <input type="text" name="name" id="name" required>
+                            </p>
+                            <p class="full">
+                                <label>Company</label>
+                                <input type="text" name="company" id="company">
+                            </p>
+                            <p class="full">
+                                <label>Email Address</label>
+                                <input type="email" name="email" id="email" required>
+                            </p>
+                            <p class="full">
+                                <label>Phone Number</label>
+                                <input type="text" name="phone" id="phone">
+                            </p>
+                            <p class="full">
+                                <label>Message</label>
+                                <textarea name="message" rows="5" id="message"></textarea>
+                            </p>
+                            <p class="full">
+                                <button type="submit">Submit</button>
+                            </p>
+                        </form>
+                    </div>
+                </div>
+            </div>
 
+            <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
+            <script src="main.js"></script>
+
+            <!-- </div> -->
             <!-- footer -->
 
             <div class="footer w-full h-[350px] bg-white">
@@ -96,19 +147,19 @@
                         <div class="uppercase text-sm text-center lg:text-left text-gray-600 mb-4">MENU</div>
                         <ul class="flex flex-col gap-2">
                             <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400">
-                                <a href="/VKU-virtual/public/">Home</a>
+                                <a href="/">Home</a>
                             </li>
                             <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400">
-                                <a href="/VKU-virtual/public/mapdigital">Digital Map</a>
+                                <a href="/mapdigital">Digital Map</a>
                             </li>
                             <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400">
-                                <a href="/VKU-virtual/public/group">Club&Groups</a>
+                                <a href="/group">Club&Groups</a>
                             </li>
                             <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400">
-                                <a href="/VKU-virtual/public/contests">Contests</a>
+                                <a href="/contests">Contests</a>
                             </li>
                             <li class="text-sm text-center lg:text-left text-gray-500 opacity-90 leading-7 hover:text-lime-400">
-                                <a href="/VKU-virtual/public/contact/">Contact</a>
+                                <a href="/contact/">Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -120,11 +171,11 @@
                             </li>
                             <li class="">
                                 <div class="logo basic-2/6 text-center text-3xl cursor-pointer">
-                                    <a class="flex flex-col justify-center items-center" href="/VKU-virtual/public/">
+                                    <a class="flex flex-col justify-center items-center" href="/">
                                         <div class="font-semibold text-lime-500">Virtual</div>
                                         <div class="flex flex-row">
-                                            <div class="uppercase font-black text-yellow-600">v</div>
-                                            <div class="uppercase font-black text-red-600">k</div>
+                                            <div class="uppercase font-black text-red-600">v</div>
+                                            <div class="uppercase font-black text-yellow-400">k</div>
                                             <div class="uppercase font-black text-blue-600">u</div>
                                         </div>
                                     </a>
